--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
   <meta name="description" content="">
+  <meta name="robots" content="noindex" />
 
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
